Stylesheet/emote/tag updates 2013-07-01

--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -25,6 +25,8 @@ a[href|="/bonbit"]{display:block;clear:none;float:left;width:100px;height:100px;
 a[href|="/bontavi"]{display:block;clear:none;float:left;width:180px;height:132px;background-image:url(%%bontavi%%)}
 a[href|="/taviboncritique"]{display:block;clear:none;float:left;width:200px;height:164px;background-image:url(%%taviboncritique%%)}
 a[href|="/fluffysit"]{display:block;clear:none;float:left;width:180px;height:194px;background-image:url(%%fluffysit%%)}
+a[href|="/lbsnuggle"]{display:block;clear:none;float:left;width:150px;height:131px;background-image:url(%%lbsnuggle%%)}
+a[href|="/lbadventures"]{display:block;clear:none;float:left;width:138px;height:180px;background-image:url(%%lbadventures%%)}
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
