--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -185,6 +185,127 @@ a[href|="/evilmilkshake"] {
     height: 170px;
     background-image:url(%%evilmilkshake%%)
 }
+
+a[href|="/braetavia"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 182px;
+    height: 150px;
+    background-image:url(%%braetavia%%)
+}
+a[href|="/hithere"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 158px;
+    height: 183px;
+    background-image:url(%%hithere%%)
+}
+
+a[href|="/banexie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 145px;
+    background-image:url(%%banexie%%)
+}
+
+a[href|="/drinkxie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 179px;
+    height: 160px;
+    background-image:url(%%drinkxie%%)
+}
+
+a[href|="/fetaltrixie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 205px;
+    height: 146px;
+    background-image:url(%%fetaltrixie%%)
+}
+
+a[href|="/sittrixie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 205px;
+    height: 170px;
+    background-image:url(%%sittrixie%%)
+}
+
+a[href|="/trixinsane"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 220px;
+    height: 117px;
+    background-image:url(%%trixinsane%%)
+}
+
+
+a[href|="/partygate"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 170px;
+    height: 196px;
+    background-image:url(%%partygate%%)
+}
+
+a[href|="/dabrushie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 187px;
+    height: 150px;
+    background-image:url(%%dabrushie%%)
+}
+
+a[href|="/crystalcolgate"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 170px;
+    height: 170px;
+    background-image:url(%%crystalcolgate%%)
+}
+
+
+a[href|="/colno"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 179px;
+    height: 163px;
+    background-image:url(%%colno%%)
+}
+
+a[href|="/colgatongue"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 218px;
+    background-image:url(%%colgatongue%%)
+}
+
+a[href|="/colgateworry"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 178px;
+    height: 237px;
+    background-image:url(%%colgateworry%%)
+}
+
+
+
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
 
