--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1176,7 +1176,9 @@ a[href|="/indignantcadance"],
 a[href|="/indignantcelestia"],
 a[href|="/indignantluna"],
 a[href|="/fascinating"],
-a[href|="/honesty"]
+a[href|="/honesty"],
+a[href|="/howyoudoin"],
+a[href|="/literallybrohoof"]
 {
     display: block;
     clear: none;
@@ -1264,6 +1266,16 @@ a[href|="/honesty"]
 {
 	width: 198px;
 	background-position: -0px -560px;
+}
+a[href|="/howyoudoin"]
+{
+	width: 155px;
+	background-position: -198px -560px;
+}
+a[href|="/literallybrohoof"]
+{
+	width: 348px;
+	background-position: -0px -700px;
 }
 /* end sheet 8 */
 
@@ -1799,4 +1811,69 @@ a[href|="/twilightstrapkle"]
 	background-position: -0px -0px;
 }
 /* end sheet 13 */
+/* start sheet 14 */
 
+a[href|="/whoers"],
+a[href|="/ahambreakfast"],
+a[href|="/abscrunchie"],
+a[href|="/cocainestia"],
+a[href|="/howvulgar"],
+a[href|="/lyrafonz"],
+a[href|="/rdtrain"],
+a[href|="/trainbowdash"],
+a[href|="/fsstare"],
+a[href|="/rdthebird"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet14%%)
+}
+a[href|="/whoers"]
+{
+	width: 144px;
+	background-position: -0px -0px;
+}
+a[href|="/ahambreakfast"]
+{
+	width: 193px;
+	background-position: -144px -0px;
+}
+a[href|="/abscrunchie"]
+{
+	width: 132px;
+	background-position: -0px -140px;
+}
+a[href|="/cocainestia"]
+{
+	width: 181px;
+	background-position: -132px -140px;
+}
+a[href|="/howvulgar"]
+{
+	width: 153px;
+	background-position: -0px -280px;
+}
+a[href|="/lyrafonz"]
+{
+	width: 129px;
+	background-position: -153px -280px;
+}
+a[href|="/rdtrain"],
+a[href|="/trainbowdash"]
+{
+	width: 259px;
+	background-position: -0px -420px;
+}
+a[href|="/fsstare"]
+{
+	width: 137px;
+	background-position: -0px -560px;
+}
+a[href|="/rdthebird"]
+{
+	width: 115px;
+	background-position: -137px -560px;
+}
+/* end sheet 14*/
