--- a/source-css/mlas1animotes.css
+++ b/source-css/mlas1animotes.css
@@ -73,6 +73,10 @@ a[href|='/today'] { width:150px; height:131px; background-image: url(%%scootawoo
 
 a[href|='/today'] { width:500px; height:270px; background-image: url(%%today%%); display: block; clear: none; float: left}
 
+a[href|='/ajnom'] { width:178px; height:150px; background-image: url(%%ajnom%%); display: block; clear: none; float: left}
+
+
+
 a[href|="/ppbop"], a[href|="/dashbop"], a[href|="/twibob"] {
     display: block;
     clear: none;
