--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1022,6 +1022,24 @@ a[href|="/sombrachargin"] {
     background-image: url(%%sombrachargin%%)
     }
 
+a[href|="/fluffbow"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 201px;
+    background-image: url(%%fluffbow%%)
+    }
+
+a[href|="/tastyhat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 152px;
+    background-image: url(%%tastyhat%%)
+    }
+
 /* Animotes End */
 
 /* Sheet1 */
