--- a/source-css/twidashmotes.css
+++ b/source-css/twidashmotes.css
@@ -69,3 +69,69 @@ a[href|="/tdwub"] {
     background-repeat:no-repeat;
     background-image:url(%%tdwub%%);
 }
+
+
+a[href|="/lightshow"], a[href|="/chibitwidash"], a[href|="/tdpassion"], a[href|="/readingismagic"], a[href|="/readingismagic"], a[href|="/tdkiss"], a[href|="/tditllbeok"], a[href|="/tdsleep"]{
+
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%twidashsprite%%)
+
+}
+
+a[href|="/lightshow"]{
+    width:150px;
+    height:273px;
+    background-position: -0px -0px !important;
+
+}
+
+a[href|="/chibitwidash"]{
+    width:225px;
+    height:150px;
+    background-position: -0px -273px !important;
+
+}
+
+a[href|="/tdpassion"]{
+    width:223px;
+    height:150px;
+    background-position: -0px -423px !important;
+
+}
+
+a[href|="/readingismagic"]{
+    width:238px;
+    height:150px;
+    background-position: -0px -573px !important;
+
+}
+
+a[href|="/readingismagic"]{
+    width:206px;
+    height:150px;
+    background-position: -0px -573px !important;
+
+}
+
+a[href|="/tdkiss"]{
+    width:166px;
+    height:150px;
+    background-position: -0px -873px !important;
+
+}
+
+a[href|="/tditllbeok"]{
+    width:121px;
+    height:150px;
+    background-position: -0px -1023px !important;
+
+}
+
+a[href|="/tdsleep"]{
+    width:216px;
+    height:150px;
+    background-position: -0px -1173px !important;
+
+}
